--- a/B站字幕/2 使用docker/3 数据卷/7 数据卷命令.md
+++ b/B站字幕/2 使用docker/3 数据卷/7 数据卷命令.md
@@ -54,6 +54,7 @@
 这个目录是谁呢
 就是v lab docker下的volumes
 比方说我现在呢利用docker创建了一个新的数据卷
+
 这个数据的名字叫html
 那么我们的docker一定会在这个指定的宿主机
 文件系统下创建出一个html的目录
@@ -66,7 +67,8 @@
 所以呢你可以认为·`数据卷它是一个虚拟的
 并不真实存在的
 只是一个概念
-而真正指向的是硬盘上的一个真实文件夹`好
+而真正指向的是硬盘上的一个真实文件夹`
+好
 那我们的容器在创建以后呢
 
 它就可以使用这个数据卷
